Prevent cards from growing too large

--- a/style.css
+++ b/style.css
@@ -91,3 +91,7 @@ a,
     justify-content: center;
     gap: 52px;
 }
+
+.card {
+    max-width: 200px;
+}
